タイムライン実装（途中）

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\yumakukita\\AppData\\Local\\conda\\conda\\envs\\kkt_twitter\\python.exe"
+    "python.pythonPath": "C:\\Users\\yumakukita\\AppData\\Local\\conda\\conda\\envs\\kkt_Twitter\\python.exe"
 }
